# my-personal-projects

./: 2010-BE-Ingenierie systemes.docx  README.md
0A-TIPE-Sac a dos/: FourierMarche.nb  ResolutionFINAL.nb  (+3 more)
2007-PIR-Drone Trirotor acrobate/Projet/Informatique/CNES/cantor-7.3/: LICENSE  README  configure.ac  ddc-cantor.txt
2007-PIR-Drone Trirotor acrobate/Projet/Informatique/CNES/cantor-7.3/doc/: AnnotatedArc.tex  Braid.tex  CantorErreurs.tex  Cone.tex  Intervalle.tex  Makefile.in  Node.tex  Polynome.tex  Rotation.tex  Secteurs.tex  StatistiqueEchantillon.tex  Variation1.tex  Variation2.tex  cantor.tex  conventions.tex  fonctions-fortran.tex  installation.tex  pages-liminaires.tex  references.tex
2007-PIR-Drone Trirotor acrobate/Projet/Informatique/CNES/cantor-7.3/en/: Makefile.in  cantor
2007-PIR-Drone Trirotor acrobate/Projet/Informatique/CNES/cantor-7.3/fr/: Makefile.in
2007-PIR-Drone Trirotor acrobate/Projet/Informatique/CNES/cantor-7.3/src/: Arc.cpp  CantorConfigNoInstall.h.in  CantorErreurs.cpp  CantorVersion.cpp  ChangeLog  FonctionApprochee.cpp  Instanciations.cpp  InterfaceC.cpp  InterfaceF.cpp  Intervalle.cpp  MoindreCarreLineaire.cpp  Node.cpp  Resolution1Iterateur.cpp  Resolution2Iterateur.cpp  StatistiqueEchantillon.cpp  ValeurDerivee1.cpp  ValeurDerivee2.cpp  Variation1.cpp
2007-PIR-Drone Trirotor acrobate/Projet/Informatique/CNES/cantor-7.3/tst/: Makefile.am  Makefile.in  prgm_CardanEuler.cpp  prgm_Field4.cpp  prgm_FonctionApprochee.cpp  prgm_Intervalle.cpp  prgm_Resolution1Iterateur.cpp  prgm_Rotation.cpp  prgm_SectionDoree.cpp  prgm_StatistiqueEchantillon.cpp  test_CardanEuler.ref  test_Cone.ref  test_Field1.ref  test_Field2.in  test_Field2.ref  test_Field3.in  test_FonctionApprochee.ref  test_Intervalle.ref  test_Resolution1Iterateur.ref  test_Resolution2Iterateur.ref  test_SectionDoree.in  test_SectionDoree.ref  test_StatistiqueEchantillon.ref  test_ValeurDerivee1.ref  test_ValeurDerivee2.in  test_Vecteur3.in
2007-PIR-Drone Trirotor acrobate/Projet/Informatique/CNES/cantor-7.3/utils/: ChangeLog  Makefile.am  cantor-config.in
2007-PIR-Drone Trirotor acrobate/Projet/Informatique/CNES/club-10.0/: AUTHORS  LICENSE  MD5  acinclude.m4  configure.ac  create-xml-strings  ddc-club.txt
2007-PIR-Drone Trirotor acrobate/Projet/Informatique/CNES/club-10.0/doc/: ClubAllocHandler.tex  ClubErreurs.tex  FichierStructure.tex  IterateurCaractere.tex  IterateurLigne.tex  MadonaFile.tex  Makefile.in  OptionsAppli.tex  StructureFile.tex  TamponPartage.tex  UniqDataFile.tex  Unit.tex  club.tex  conventions.tex  environnement.tex  formats.tex  hierarchie.eps  macros-bibliotheques.tex
2007-PIR-Drone Trirotor acrobate/Projet/Informatique/CNES/club-10.0/fr/: Makefile.am  Makefile.in  club
2007-PIR-Drone Trirotor acrobate/Projet/Informatique/CNES/club-10.0/resources/: ChangeLog  Makefile.in  club-units.xml
2007-PIR-Drone Trirotor acrobate/Projet/Informatique/CNES/club-10.0/src/: BaseErreurs.cpp  ChaineSimple.cpp  ClubVersion.cpp  IterateurChamp.cpp  IterateurLigne.cpp  MadonaFile.cpp  Makefile.am  OptionBase.cpp  OptionReel.cpp  OptionSansValeur.cpp  OptionTableauEntiers.cpp  OptionTableauReels.cpp  OptionsAppli.cpp  StructureFile.cpp  TamponAscii.cpp  TamponBase.cpp  TamponPartage.cpp  TamponTexte.cpp  UniqDataFile.cpp  XMLDataStrings.txt
2007-PIR-Drone Trirotor acrobate/Projet/Informatique/CNES/club-10.0/tst/: Makefile.am  prgm_AnalyseurLexical.cpp  prgm_FormatC.cpp  prgm_TamponCaractere.cpp  prgm_TamponChamp.cpp  prgm_TamponChampLigne.cpp  prgm_TamponLigne.cpp  prgm_TamponPartage.cpp  prgm_XMLUnits.cpp  test_AnalyseurLexical.in  test_AnalyseurLexical.ref  test_DataFile_BadSF  test_FichierStructure.don  test_FichierStructure.don2  test_FichierStructure.in  test_FichierStructure.ref.in  test_FormatC.ref  test_FormatFortran.in  test_FormatFortran.ref  test_MadonaFile.don1  test_MadonaFile.ref1  test_OptionsAppli.ref  test_StructureFile.don  test_StructureFile.ref.in  test_TamponChamp.ref.in  test_TamponChampLigne.in  test_TamponChampLigne.ref.in  test_TamponTexte.in  test_Traducteur.fr  test_Traducteur.ref  test_XMLData.don1  test_XMLData.ref1  test_XMLData.ref2.in  test_XMLUnits.in
2007-PIR-Drone Trirotor acrobate/Projet/Informatique/CNES/marmottes-9.8/: AUTHORS  COPYING  LICENCE  MD5  Makefile.in  README  TODO  configure.ac
2007-PIR-Drone Trirotor acrobate/Projet/Informatique/CNES/marmottes-9.8/doc/: Makefile.am
2007-PIR-Drone Trirotor acrobate/Projet/Informatique/CNES/marmottes-9.8/en/: Makefile.am
2007-PIR-Drone Trirotor acrobate/Projet/Informatique/CNES/marmottes-9.8/exemples/: ChangeLog  Makefile.am  Makefile.in
2007-PIR-Drone Trirotor acrobate/Projet/Informatique/CNES/marmottes-9.8/fr/: Makefile.am  Makefile.in  marmottes
2007-PIR-Drone Trirotor acrobate/Projet/Informatique/CNES/marmottes-9.8/src/: BodyEphem.cpp  BodyEphemC.cpp  Etat.cpp  Famille.cpp  FamilleAlignementPlus.cpp  FamilleFixe.cpp  FamilleGenerale.cpp  InterfaceC.cpp  Makefile.in  MarmottesVersion.cpp  ModeleCine.cpp  ParcelleElementaire.cpp  ReunionEtParcelles.cpp  ReunionOuParcelles.cpp  SenseurAlpha.cpp  SenseurDiedre.cpp  SenseurFonctionEchant1D.cpp  SenseurFonctionSinCard2.cpp  SenseurFonctionSinCardXY.cpp  SenseurGyroInteg.cpp  SenseurOptique.cpp  SpinAtt.cpp
2007-PIR-Drone Trirotor acrobate/Projet/Informatique/CNES/marmottes-9.8/tst/: prgm_BodyEphem.cpp  prgm_BodyEphemF.f  prgm_FonctionSenseur.cpp  prgm_MethodesMarmottes.cpp  prgm_Parcelle.cpp  prgm_Senseur.cpp  senseurs.fr  test_BodyEphem.ref  test_BodyEphemF.ref  test_BugsIds.0001.out  test_BugsIds.0001.sensors  test_BugsIds.0003.out  test_BugsIds.0003.sensors  test_BugsIds.0007.sensors  test_BugsIds.0008.sensors  test_BugsIds.0034.sensors  test_BugsIds.0230.sensors  test_Capteurs.alpha.sensors  test_Capteurs.in  test_Capteurs.vApp.sensors  test_Criteres.aef.sensors  test_Criteres.in  test_FonctionSenseur.ref  test_Forcage.attitude.sensors  test_Forcage.in  test_Marmottes.in  test_Marmottes.ref  test_Prems.in  test_Prems.ires.sensors  test_Presens.aef.sensors  test_Presens.inhib.sensors  test_Senseur.in  test_Senseur.ref
(+1986 files in other folders)
