## Process this file with automake to produce Makefile.in

LDADD                         = ../src/libcantor.la

AM_LDFLAGS                    = -static

INCLUDES                      = -I@srcdir@/../src

noinst_PROGRAMS               = prgm_Arc1                    \
                                prgm_Arc2                    \
                                prgm_CardanEuler             \
                                prgm_Cone                    \
                                prgm_Creneau                 \
                                prgm_Field1                  \
                                prgm_Field2                  \
                                prgm_Field3                  \
                                prgm_Field4                  \
                                prgm_FonctionApprochee       \
                                prgm_Intervalle              \
                                prgm_Polynome                \
                                prgm_Resolution1Iterateur    \
                                prgm_Resolution2Iterateur    \
                                prgm_Rotation                \
                                prgm_SectionDoree            \
                                prgm_StatistiqueEchantillon  \
                                prgm_ValeurDerivee1          \
                                prgm_ValeurDerivee2          \
                                prgm_Vecteur3

prgm_Arc1_SOURCES                    = prgm_Arc1.cpp
prgm_Arc2_SOURCES                    = prgm_Arc2.cpp
prgm_CardanEuler_SOURCES             = prgm_CardanEuler.cpp
prgm_Cone_SOURCES                    = prgm_Cone.cpp
prgm_Creneau_SOURCES                 = prgm_Creneau.cpp
prgm_Field1_SOURCES                  = prgm_Field1.cpp
prgm_Field2_SOURCES                  = prgm_Field2.cpp
prgm_Field3_SOURCES                  = prgm_Field3.cpp
prgm_Field4_SOURCES                  = prgm_Field4.cpp
prgm_FonctionApprochee_SOURCES       = prgm_FonctionApprochee.cpp
prgm_Intervalle_SOURCES              = prgm_Intervalle.cpp
prgm_Polynome_SOURCES                = prgm_Polynome.cpp
prgm_Resolution1Iterateur_SOURCES    = prgm_Resolution1Iterateur.cpp
prgm_Resolution2Iterateur_SOURCES    = prgm_Resolution2Iterateur.cpp
prgm_Rotation_SOURCES                = prgm_Rotation.cpp
prgm_SectionDoree_SOURCES            = prgm_SectionDoree.cpp
prgm_StatistiqueEchantillon_SOURCES  = prgm_StatistiqueEchantillon.cpp
prgm_ValeurDerivee1_SOURCES          = prgm_ValeurDerivee1.cpp
prgm_ValeurDerivee2_SOURCES          = prgm_ValeurDerivee2.cpp
prgm_Vecteur3_SOURCES                = prgm_Vecteur3.cpp

TESTS                         = test_Arc1                    \
                                test_Arc2                    \
                                test_CardanEuler             \
                                test_Cone                    \
                                test_Creneau                 \
                                test_Field1                  \
                                test_Field2                  \
                                test_Field3                  \
                                test_Field4                  \
                                test_FonctionApprochee       \
                                test_Intervalle              \
                                test_Polynome                \
                                test_Resolution1Iterateur    \
                                test_Resolution2Iterateur    \
                                test_Rotation                \
                                test_SectionDoree            \
                                test_StatistiqueEchantillon  \
                                test_ValeurDerivee1          \
                                test_ValeurDerivee2          \
                                test_Vecteur3

MOSTLYCLEANFILES     = test_Arc1.res                    \
                       test_Arc2.res                    \
                       test_CardanEuler.res             \
                       test_Cone.res                    \
                       test_Creneau.res                 \
                       test_Field1.res                  \
                       test_Field2.res                  \
                       test_Field3.res                  \
                       test_Field4.res                  \
                       test_FonctionApprochee.res       \
                       test_Intervalle.res              \
                       test_Polynome.res                \
                       test_Resolution1Iterateur.res    \
                       test_Resolution2Iterateur.res    \
                       test_Rotation.res                \
                       test_SectionDoree.res            \
                       test_StatistiqueEchantillon.res  \
                       test_ValeurDerivee1.res          \
                       test_ValeurDerivee2.res          \
                       test_Vecteur3.res

EXTRA_DIST           = test_Arc1.ref                   \
                       test_Arc2.ref                   \
                       test_CardanEuler.ref            \
                       test_Cone.ref                   \
                       test_Creneau.ref                \
                       test_Field1.ref                 \
                       test_Field2.ref                 \
                       test_Field3.ref                 \
                       test_Field4.ref                 \
                       test_FonctionApprochee.ref      \
                       test_Intervalle.ref             \
                       test_Polynome.ref               \
                       test_Resolution1Iterateur.ref   \
                       test_Resolution2Iterateur.ref   \
                       test_Rotation.ref               \
                       test_SectionDoree.ref           \
                       test_StatistiqueEchantillon.ref \
                       test_ValeurDerivee1.ref         \
                       test_ValeurDerivee2.ref         \
                       test_Vecteur3.ref
