## Process this file with automake to produce Makefile.in

LDADD                   = ../src/libmarmottes.la

INCLUDES                = -I@srcdir@/../src

bin_SCRIPTS             = marmottes-config traduitSenseurs

bin_PROGRAMS            = marmottesReplay

marmottesReplay_SOURCES = marmottesReplay.cpp
